Several figures added; moving plate with current is considered; speed of light.

--- a/em.tex
+++ b/em.tex
@@ -1547,8 +1547,9 @@ $\eps_0$.
 одной точке пространства не осуществлялась передача тепла. Таким
 образом, есть ещё дополнительное условие: $\sigma \vec{E}^2 =
 0$. Таким образом, либо проводимость $\sigma$ должна равняться нулю,
-либо само поле $\vec{E}$. В любом случае, ток тоже будет равен нулю,
-так что получаем
+либо само поле $\vec{E}$ (из этого следует, кстати, что в статике в
+проводнике нет электрического поля). В любом случае, ток тоже будет
+равен нулю, так что получаем
 
 \begin{equation}
   \label{eq:statics_maxwell_2}
@@ -1866,6 +1867,17 @@ $I$. Чтобы найти механическую силу $\vec{F}$, кото
  \sum \vec{F} \cdot \delta \vec{r} = -\delta U = I \delta \left( \int \vec{B}  \cdot d\vec{S}\right). 
 \end{equation}
 
+\begin{wrapfigure}{r}{40mm}
+  \vspace{-1.5cm}
+  \begin{center}
+  \includegraphics[width=4cm]{ampere.pdf}  
+  \end{center}
+  \vspace{-1cm}
+  \caption{К вычислению силы Ампера.}
+  \label{fig:amperes_force}
+  \vspace{-1.1cm}
+\end{wrapfigure}
+
 Фактически, нам нужно вычислить изменение потока. Так как магнитное
 поле постоянно, изменение потока складывается лишь за счёт изменения
 площади поверности, которая пронизывается магнитным полем. Если мы
@@ -1893,13 +1905,272 @@ $I$. Чтобы найти механическую силу $\vec{F}$, кото
 \end{equation}
 
 Она называется \textbf{силой Ампера} и показывает, с какой силой
-постоянное магнитное поле действует на проводник с током $I$.
+постоянное магнитное поле действует на проводник с током $I$. Можно
+заметить, что эта сила направлена перпендикулярно магнитному полю.
+
+Заметим также, что эта сила обеспечивает взаимодействие между двумя
+проводами с током. Действительно, ток создаёт магнитное поле вокруг
+себя (по закону Ампера \eqref{eq:amperes_law}). Это магнитное поле
+действует на второй провод с током по уравнению
+\eqref{eq:amperes_force}. 
+
+\begin{wrapfigure}{r}{40mm}
+  \vspace{-1cm}
+  \begin{center}
+  \includegraphics[width=4cm]{2wires.pdf}  
+  \end{center}
+  \vspace{-1cm}
+  \caption{Притяжение двух проводов.}
+  \label{fig:2wires}
+  \vspace{-0.8cm}
+\end{wrapfigure}
+
+Разберём простейшую ситуацию, когда провода параллельны друг другу, а
+токи в них сонаправлены. Вокруг первого тока создаётся магнитное поле,
+закрученное вокруг провода по часовой стрелке (если смотреть по
+направлению тока). Это поле действует на участок тока $d\vec{r}$
+второго провода. Сила Ампера --- векторное произведение, поэтому её
+направление можно получить по правилу правой руки. Отсюда видно, что
+сила Ампера $\vec{F}$ направлена перпендикулярно второму проводу по
+направлению к первому. Очевидно, аналогичное рассуждение можно
+провести и для силы, действующей на первый провод со стороны второго.
+
+Из этого рассмотрения видно, что противоположно напраленные токи
+всегда отталкиваются. 
 
 \subsection{Сила Лоренца.}
 \label{sec:lorentz_force}
 
-\subsection{Парадокс Фарадея.}
-\label{sec:faradays_paradox}
+Сила Ампера позволяет довольно просто установить ещё один общий закон,
+универсальный для всей электродинамики. Действительно, зададимся
+вопросом: что такое ток в проводе? Это не что иное, как упорядоченный
+поток электронов. Представим, что у нас имеется кусочек провода длины
+$d\vec{l}$, и площадью сечения $S$. На него действует сила Ампера,
+равная
+\begin{equation}
+  \label{eq:der_lorentz_force_1}
+  d\vec{F} = I \cdot d\vec{l} \times \vec{B} = \vec{J} \times \vec{B}\, dV.
+\end{equation}
+
+Но что такое $J \, dV$? Это просто количество заряда, протёкшее через
+сечение нашего проводника. Если концентрация электронов равна $n$, заряд
+каждого из них $q$, а скорость $\vec{v}$, то 
+
+\begin{equation}
+  \label{eq:der_lorentz_force_2}
+  \vec{J} = n q \vec{v}.
+\end{equation}
+
+Подставляя эту плотность тока в силу Ампера, получим
+
+\begin{equation}
+  \label{eq:der_lorentz_force_3}
+  d\vec{F} = q \, \vec{v} \times \vec{B} \, n\, dV.
+\end{equation}
+
+Произведение $n \, dV$ даёт просто количество электронов в объёме
+$dV$. Таким образом, можно сказать, что сила Ампера --- это сила,
+действующая на одиночный заряд, умноженная на количество
+зарядов. Получается, что сила со стороны магнитного поля, действующая
+на одиночный заряд, равна
+
+\begin{equation}
+  \label{eq:lorentz_force}
+  \vec{F} = q \vec{v} \times \vec{B}.
+\end{equation}
+
+Это --- \textbf{сила Лоренца}. Опять же, она перпендикулярна скорости
+зарядов, а также магнитному полю, которое действует на них. Из этого
+ясно, что сила Лоренца никогда не совершает работы (потому что её
+мощность равна нулю). 
+
+Если теперь вспомнить, что на заряженную частицу может ещё действовать
+сила со стороны электрического поля, то получится общее выражение для
+силы в электродинамике:
+
+\begin{equation}
+  \label{eq:force_electrodynamics}
+  \vec{F} = q (\vec{E} + \vec{v} \times \vec{B}).
+\end{equation}
+
+Имея на руках выражение для силы Лоренца, мы можем понять, как
+меняется ЭДС в случае изменения магнитного потока не за счёт изменения
+магнитного поля, а за счёт изменения площади контура. Напомним, в
+выводе закона Фарадея \eqref{eq:faradays_law} мы предполагали, что наш
+контур остаётся неизменным, а меняется лишь магнитное поле. 
+
+\begin{wrapfigure}{r}{40mm}
+  \vspace{-1cm}
+  \begin{center}
+  \includegraphics[width=4cm]{faraday.pdf}  
+  \end{center}
+  \vspace{-1cm}
+  \caption{Изменение потока.}
+  \label{fig:faraday}
+\end{wrapfigure}
+
+Рассмотрим теперь противоположную ситуацию. Пусть у нас есть
+проволочная U-образная петля шириной $h$, по которой может скользить без трения
+перемычка. Пусть имеется магнитное поле $\vec{B}$, перпендикулярное
+плоскости петли. Заставим перемычку перемещаться со скоростью
+$V$. Очевидно, что на заряды в перемычке будет действовать сила $F =
+V B$ (мы рассматриваем единичные заряды), направленная вдоль
+перемычки. В остальных местах перемычки никакой силы действовать не
+будет. Таким образом, циркуляция вдоль замкнутого контура равна
+$\eps=-hVB$ (мы учли направление обхода). 
+
+Заметим, что то же самое мы получили бы, если бы посчитали изменение
+потока по правилу Фарадея. Действительно, поток зависит от положения
+перемычки так: $\Phi = h B L$. При этом $L=Vt$, так как перемычка
+движется равномерно. Получаем из \eqref{eq:faradays_law}, что $\eps =
+-h VB$.
+
+Аналогичное рассуждение можно провести для контура произвольной
+формы. Таким образом, можно показать, что возникающая в контуре ЭДС
+равна изменению потока по времени вне зависимости от того, чем вызвано
+это изменение --- магнитным полем, или изменяющимся контуром. 
+
+\subsection{Физический смысл добавки Максвелла. }
+\label{sec:physical_sense_maxwell}
+
+В уравнении Максвелла для ротора магнитного поля мы сталкиваемся с
+тем, чего ещё не было в нашем опыте: магнитное поле создаётся как
+изменением магнитного поля, так и током. Почему нельзя было
+ограничиться чем-то одним, как в случае электрического поля? 
+
+Ответ на этот вопрос даёт один несложный пример. Рассмотрим плоский
+конденсатор, заряжающийся от провода. Пусть заряд $Q$ на пластинах
+изменяется. Через провод таким образом будет течь ток $dQ/dt$. Этот
+ток по закону Ампера будет создавать магнитное поле (мы уже вычислили
+его в разделе \ref{sec:mfield_wire}). Здесь мы рассмотрили контур $C$,
+расположенный вокруг провода. При этом можно вспомнить, что снаружи
+проводника поля нет, поэтому добавка $\pt \vec{E}/\pt t$ никак не
+меняет ситуацию.
+
+\begin{wrapfigure}{r}{40mm}
+  \vspace{-1cm}
+  \begin{center}
+  \includegraphics[width=4cm]{displacement.pdf}  
+  \end{center}
+  \vspace{-1cm}
+  \caption{Магнитное поле возле конденсатора.}
+  \label{fig:displacement}
+\end{wrapfigure}
+
+
+Теперь рассмотрим контур $C'$, расположенный между пластинами. Никакого
+тока через поверхность, ограниченную таким контуром не
+проходит. Означает ли это, что никакого магнитного поля нет? Это было
+бы очень странно. И действительно, теперь в дело вступает добавка из
+уравнения Максвелла. Силовые линии направлены от одной пластины к
+другой, поэтому поток электрического поля по теореме Гаусса равен
+заряду на пластине $Q$. А циркуляция магнитного поле, как можно
+заметить, равно скорости изменения этого потока (по тем же причинам,
+что циркуляция электрического поля равна скорости изменения магнитного
+потока). 
+
+Циркуляция магнитного поля по контуру радиуса $r$ равна $2\pi r
+\mu_0 B$. Скорость изменения потока равна 
+
+\begin{equation}
+  \label{eq:phys_sense_maxwell_1}
+  \frac{1}{\eps_0} \frac{dQ}{dt}.
+\end{equation}
+
+Таким образом, мы получаем тот же ответ, что и для магнитного поля
+вокруг провода \eqref{eq:mfield_thin_current_2} (т.к. $\vec{D} =
+\eps_0 \vec{E}$). Добавка Максвелла обеспечивает согласованность нашей
+картины.
+
+\section{Движущееся электромагнитное поле. }
+\label{sec:moving_plate}
+
+\subsection{Скорость света.}
+\label{sec:speed_of_light}
+
+Рассмотрим неподвижный заряженный лист, размещённый в плоскости
+$yz$. Пусть он быстро приобретает скорость $u$ в направлении оси $y$ и
+движется с этой постоянной скоростью. Итого, мы внезапно получаем ток
+плотностью $J$ (ток, отнесённый к единице ширины по оси
+$z$). Рассмотрим также неподвижный противоположно заряженный лист в
+той же плоскости $yz$, чтобы забыть про электростатические эффекты.
+
+\com{Вставить два рисунка}
+
+Если имеется лист с током в положительном $y$ направлении, то
+возникнет магнитное поле, направленное в отрицательном $z$
+направлении (при $x>0$) и в положительном $z$ направлении при $x<0$. 
+
+Ясно, что если магнитное поле скачком меняется от нуля до конечной
+величины, то появиляются очень большие электрические эффекты. Так что
+появляется меняющееся магнитное поле и меняющееся электрическое. Таким
+образом, возникает производная $\pt \vec{E} / \pt t$, которая вместе с
+током $\vec{J}$ будет вносить вклад в магнитное поле (по уравнению
+Максвелла). Выходит, что уравнения очень сильно зацеплены друг с
+другом и сильно зависят от времени. 
+
+Попробуем, однако, описать количественно, что происходит. Посмотрим на
+эту систему сверху. Ток будет направлен на нас, магнитное поле лежит
+в плоскости рисунка. Если смотреть сбоку, то лист будет двигаться
+вверх, а поле будет смотреть на нас или от нас. 
+
+Предположим такое распределение полей. Пусть с момента начала движения
+нашей плоскости прошло время $t$. Тогда утверждается, что поля
+$\vec{E}, \vec{B}$ будут существовать в пространстве только до
+$x=vt$, где $v$---некоторая константа. Проверим, как это согласуется с
+уравнениеями Максвелла. 
+
+Проведём прямоугольный контур $\Gamma_2$. Он охватывает часть
+пространства, где есть поля (слева от прямой $x=vt$), и часть
+пространства, где нет полей. Если фронт движется со скоростью $v$, то
+поток магнитного поля через $\Gamma_2$ будет меняться тоже со
+скоростью $v$. Если ширина прямоугольника равна $L$, то наводящаяся по
+контуру ЭДС равна, по закону Фарадея, 
+
+\begin{equation}
+  \label{eq:moving_plate_1}
+  E = v B.
+\end{equation}
+
+То есть, если отношение $E$ к $B$ равно $v$, то наши поля будут
+удовлетворять закону Фарадея (т.е. одному из уравнений Максвелла). 
+
+Однако, у нас есть ещё одно уравнение: оно связывает ротор магнитного
+поля с изменением электрического и током. Чтобы применить его,
+посмотрим на нашу систему сверху. Опять нарисуем прямоугольный
+контурн $\Gamma_1$, который пересекает волновой фронт. Токов через
+этот контур не проходит, поэтому циркуляция $B$ равна скорости
+изменения потока $E$. Аналогично предыдущим соображениям, находим, что 
+
+\begin{equation}
+  \label{eq:moving_plate_2}
+  E = \frac{1}{\eps_0 \mu_0 v} B.
+\end{equation}
+
+Собирая вместе уравнения \eqref{eq:moving_plate_1} и
+\eqref{eq:moving_plate_2}, получаем, что скорость волнового фронта
+равна 
+
+\begin{equation}
+  \label{eq:velocity_front}
+  v = \frac{1}{\sqrt{\eps_0 \mu_0}}.
+\end{equation}
+
+Таким образом, волновой фронт распространяется с \textit{конечной
+  скоростью}, которая может быть вычислена на основании электрических
+и магнитных свойств среды (в данном случае --- вакуума). 
+
+Обе константы $\eps_0$ и $\mu_0$ могут быть измерены
+экспериментально: нужно лишь померять силы взаимодействия зарядов или
+токов. На основании этих данных можно вычислить скорость
+$v$. Выясняется, что она с огромной точностью равна скорости света
+$c$. Разумеется, это не простое совпадение. 
+
+\section{Калибровочная инвариантность.}
+\label{sec:gauge}
+
+\section{Волновые процессы.}
+\label{sec:waves}
 
 
 
