Poynting for capacitor; induction; kirchoff rules.

--- a/em.tex
+++ b/em.tex
@@ -18,6 +18,7 @@
 \renewcommand{\div}{\mathrm{div}\,}
 \newcommand{\vn}{\vec{\nabla}}
 \newcommand{\eps}{\epsilon}
+\newcommand{\vareps}{\varepsilon}
 \newcommand{\const}{\mathrm{const}}
 \newcommand{\com}[1]{{\Large{\texttt{{\color{red}(#1)}}}}}
 
@@ -2120,9 +2121,9 @@ $x=vt$, где $v$---некоторая константа. Проверим, к
 
 \begin{figure}[h]
   \centering
-  \subfloat[Вид сбоку]{\label{fig:plate2}\includegraphics[scale=1]{plate2.pdf}}
+  \subfloat[Вид сбоку.]{\label{fig:plate2}\includegraphics[scale=1]{plate2.pdf}}
   \hspace{2cm}
-  \subfloat[Вид сверху]{\label{fig:plate1}\includegraphics[scale=1]{plate1.pdf}}
+  \subfloat[Вид сверху.]{\label{fig:plate1}\includegraphics[scale=1]{plate1.pdf}}
   \caption{Движущаяся заряженная плоскость.}
   \label{fig:moving_plate}
 \end{figure}
@@ -2722,11 +2723,339 @@ $-E_2(r) h$ (так как по трём сторонам из четырёх о
 
 Заметим, что когда $x \approx 2.4$ функция Бесселя обращается в
 нуль. То есть, в точках $\omega r \approx 2.4 c$ поле между обкладками
-в конденсаторе равно нулю! Это можно увидеть либо в специальных точках
-конденсатора, либо повышая частоту. Более того, как видно из графика,
+в конденсаторе равно нулю! Более того, как видно из графика,
 возможна ситуация, когда поле в центре конденсатора (при $r=0$) и на
 краях направлено в противоположные стороны. Это довольно сильно
 разнится с нашей первоначальной гипотезой об однородном электрическом
 поле. 
+
+\subsection{Перетекание энергии в конденсаторе. }
+\label{sec:energy_capacitor}
+
+Теперь посмотрим, как ведёт себя энергия конденсатора, который
+находится в этом переменном электромагнитном поле. Если радиус пластин
+равен $R$, а расстояние между ними $h$, то полная энергия будет равна
+
+\begin{equation}
+  \label{eq:energy_cap}
+  U = \frac{\eps_0}{2} E^2 \, \pi R^2 h.
+\end{equation}
+
+Очевидно, что раз поле меняется, то меняется и наша энергия. Если
+конденсатор заряжается, энергия увеличивается, и должен существовать
+поток энергии, направленный откуда-то со стороны внутрь объёма. 
+
+Удивительный факт состоит в том, что этот поток направлен не со
+стороны проводов. Действительно, мы видели, что вектор Пойнтинга
+(ответственный за направление потока энергии) перпендикулярен как
+электрическому, так и магнитному полю. В нашем случае $\vec{E}$
+перпендикулярен к пластинам, поэтому вектор Пойнтинга должен быть
+параллельно им. 
+
+Кроме того, мы знаем, что вектор $\vec{B}$ направлен по касательной к
+окружности с центром на оси конденсатора. Так что вектор Пойнтинга
+параллелен пластинам и направлен по радиусу к оси симметрии
+конденсатора. Получается, что энергия втекает в конденсатор не по
+проводам, а через зазор между пластинами. 
+
+
+\section{Электротехника.}
+\label{sec:electrotechnics}
+
+Будем теперь потихоньку спускаться с небес теории электромагнитного
+поля к чему-то земному, например, к электрическим цепям.
+
+\subsection{Генератор переменного тока. }
+\label{sec:generator}
+
+Пусть имеется круглая катушка из проволоки, которая может вращаться
+вокруг оси, проходящей через один из её диаметров. Оба конца катушки
+выведены на внешнюю цепь (например, на амперметр). Катушка помещена в
+магнитное поле, перпендикулярное оси вращения. 
+
+Поток через катушку зависит от угла $\theta$, под которым площадка находится по
+отношению к магнитному полю: $\Phi = B\cdot S \cdot \cos \theta$. Если
+катушка вращается с постоянной угловой скоростью, то $\theta = \omega
+t$. По закону Фарадея в катушке возникает ЭДС:
+
+\begin{equation}
+  \label{eq:generator_faradey}
+  \eps = -\frac{d \Phi}{dt}  = B S \omega \sin \omega t.
+\end{equation}
+
+На большом расстоянии от катушки, где $\rot \vec{E} =0$, можно
+сказать, что разность потенциалов равна этой ЭДС: $V = B S \omega \sin
+\omega t \equiv V_0 \sin \omega t$. Это --- переменная разность
+потенциалов. 
+
+Раз есть разность потенциалов, то, очевидно, возникает переменный
+ток. Если вся наша цепь имеет сопротивление $R$, то переменный ток
+равен
+
+\begin{equation}
+  \label{eq:generator_current}
+  I = \frac{V}{R} = \frac{V_0}{R} \sin \omega t.
+\end{equation}
+
+Покажем теперь, что ЭДС определяет количество энергии, поставляемое
+генератором. В единицу времени каждый заряд получает энергию $\vec{F}
+\cdot \vec{v}$. Пусть концентрация зарядов на единицу длины провода
+равна $n$. Тогда в куске провода длиной $dl$ мощность равна
+
+\begin{equation}
+  \label{eq:generator_power_1}
+  \vec{F} \ cdot \vec{v} n dl = nv \vec{F} \cdot d\vec{l}.
+\end{equation}
+
+Полная мощность, выделяющаяся в цепи, равна интегралу от этой
+величины по всей цепи:
+
+\begin{equation}
+  \label{eq:generator_power_2}
+  P = \oint nv \vec{F} \cdot d\vec{l}.
+\end{equation}
+
+Теперь заметим, что $qnv$ --- это ток $I$, а $F/q$ --- ЭДС. Таким
+образом, получаем, что $P = \vareps I$.
+
+\subsection{Катушки индуктивности.}
+\label{sec:coil}
+
+\subsubsection{Взаимная индукция.}
+\label{sec:common_induction}
+
+Теперь рассмотрим случай, когда катушки неподвижны, а меняется
+магнитное поле. Сделаем катушку номер 1 в виде длинного соленоида,
+обмотанного проволокой. Вокруг этой катушки и изолированно от неё
+намотаем катушку номер 2. Если в катушке номер 1 пропустить ток, то он
+вызовет магнитное поле. Меняющийся поток этого магнитного поля вызовет
+индуцированную ЭДС в катушке номер 2. 
+
+Если в катушке 1 течёт ток $I$, то по формуле
+\eqref{eq:mfield_solenoid} возникает магнитное поле. Пусть площадь
+сечения катушки 1 равна $S$, а число витков во второй катушке равно
+$N_2$. Тогда поток магнитного поля во второй катушке равен $\Phi_2 = B
+S N_2$. По закону Фарадея в ней возникает переменная ЭДС, равная
+
+\begin{equation}
+  \label{eq:induction_eds}
+  \vareps = - N_2 S \frac{dB}{dt} = -\mu_0 \frac{N_1 N_2 S}{l} \frac{dI_1}{dt}.
+\end{equation}
+
+Таким образом, ЭДС во второй катушке прямо пропорциональна скорости
+изменения тока в первой катушке. Коэффициент пропорциональности
+зависит только от геометрии двух катушек. Он называется
+\textbf{коэффициентом взаимной индукции}, и обычно обозначается
+$L_{12}$.
+
+Попробуем теперь всё провернуть наоборот: пропустить ток через катушку
+2 и посмотреть, что будет в катушке 1. Понятно, что ЭДС в катушке 1
+будет пропорциональна скорости изменения тока в катушке 2. Коэффициент
+пропорциональности можно обозначить как $L_{21}$. Можно показать, что
+$L_{12} = L_{21}$ для любых катушек и для любой их конфигурации. 
+
+\subsubsection{Самоиндукция.}
+\label{sec:self_induction}
+
+Представим теперь, что ток меняется в обеих катушках
+одновременно. Магнитный поток в каждой катушке будет по принципу
+суперпозиции представлять сумму потоков. Таким образом, ЭДС в катушке
+2, например, можно записать так: 
+
+\begin{equation}
+  \label{eq:self_induction_1}
+  \vareps_2 = L_{21} \frac{dI_1}{dt} + L_{22} \frac{dI_2}{dt}.
+\end{equation}
+
+Аналогично для ЭДС в катушке 1:
+
+\begin{equation}
+  \label{eq:self_induction_2}
+  \vareps_1 = L_{12} \frac{dI_2}{dt} + L_{11} \frac{dI_1}{dt}.
+\end{equation}
+
+Коэффициенты $L_{11},L_{22}$ всегда отрицательны. Обычно их обозначают
+просто $-L_1,-L_2$ и называют \textbf{индуктивностями}. Опять же, этот
+параметр зависит исключительно от геометрии катушки. Для каждой
+отдельной катушки можно записать
+
+\begin{equation}
+  \label{eq:self_induction_3}
+  \vareps = - L \frac{dI}{dt}. 
+\end{equation}
+
+Знак минус указывает на то, что ЭДС противодействует изменению тока. 
+
+Поскольку имеется подобное противодействие, ток в катушке обладает
+некоторой инерцией. Если мы захоим изменить ток в катушке, надо
+преодолеть эту инерцию, присоединив катушку ко внешнему генератору. В
+такой цепи ток будет связан с напряжением соотношением
+
+\begin{equation}
+  \label{eq:self_induction_4}
+  V = L \frac{dI}{dt}.
+\end{equation}
+
+Это уравнение имеет вид закона Ньютона для частицы в одном
+измерении. Имеет место простая аналогия: сила $F$ соответствует
+разности потенциалов $V$, скорость $v$ --- силе тока $I$, масса $m$
+--- индуктивности $L$ (именно поэтому катушка обладает <<инерцией>>
+--- совсем как массивное тело). 
+
+Продолжая эту аналогию, можно выяснить, что энергия такой цепи будет
+равна $LI^2/2$. Фактически, мы вывели энергию цепи с катушкой исходя
+только лишь из электромеханических аналогий. Кроме того, можно
+показать, что для системы двух связанных катушек (которые мы
+рассматривали в предыдущем разделе), энергия будет равна
+
+\begin{equation}
+  \label{eq:self_induction_energy}
+  E = \frac12 L_1 I_1^2 + \frac12 L_2 I_2^2 - L_{12} I_1 I_2.
+\end{equation}
+
+Действительно, пускай сначала токи в обеих катушках равны
+нулю. Включим сначала ток $I_1$, оставляя $I_2=0$. Совершённая работа
+как раз равна $L_1 I_1^2/2$. Теперь, включая $I_2$, мы совершаем
+работу $L_2 I_2^2/2$ не только против ЭДС в катушке 2, но и против ЭДС
+в катушке 1. Эта последняя работа равна произведению $I_1$ на ЭДС в
+катушке 1. ЭДС в катушке 1 равна интегралу от $L_{12} dI_2/dt$. Таким
+образом, получаем формулу \eqref{eq:self_induction_energy}. 
+
+
+Наконец, вычислим индуктивность одиночной катушки. Проще всего это
+сделать из энергетических соображений. Действительно, пусть в катушке
+магнитное поле равно $B$. Тогда энергия, запасённая в катушке радиусом
+$r$ и длиной $L$ равна
+
+\begin{equation}
+  \label{eq:coil_energy_1}
+  U = \frac{1}{2 \mu_0} B^2 \Rightarrow E = \frac{1}{2\mu_0} (\mu_0 n
+  I)^2 \pi r^2 L = \frac{\mu_0}{2} \pi r^2 L n^2 I^2.
+\end{equation}
+
+С другой стороны, эта энергия равна $LI^2/2$. Отсюда получаем, что
+индуктивность одиночной катушки равна
+
+\begin{equation}
+  \label{eq:inductivity}
+  L = \mu_0 \pi r^2 n^2 L.
+\end{equation}
+
+\subsection{Законы Кирхгофа.}
+\label{sec:kirchoff}
+
+Рассмотрим цепь, состоящую из произвольного набора элементов:
+конденсаторов, катушек, резисторов и генераторов. Примём одно важное
+допущение: меняющееся магнитное поле ограничено только малой областью
+в окрестности приборов, в остальном пространстве его нет.
+
+Рассмотрим кривую $\Gamma$, обходящую цепь вокруг приборов. Контурный
+интеграл от $\vec{E}$ вдоль этой кривой состоит из нескольких
+частей. Каждая часть --- это интеграл от одного зажима прибора до
+другого. Мы называем этот интеграл \textit{падением напряжения} на
+приборе. Тогда весь интеграл равен просто сумме падений напряжений:
+
+\begin{equation}
+  \label{eq:kirchoff_1}
+  \oint \vec{E} \cdot d \vec{l} = \sum_n V_n.
+\end{equation}
+
+Так как меняющихся магнитных полей за пределами приборов нет, то этот
+интеграл равен нулю во второму уравнению Максвелла. Следовательно, 
+
+\begin{equation}
+  \label{eq:kirchoff_2}
+  \sum_n V_n = 0. 
+\end{equation}
+
+Предположим теперь, что зарядом, накапливающимся на приборах, можно
+пренебречь. Тогда сохранение заряда требует, чтобы любой заряд,
+вышедший из одного элемента цепи, входил в другой элемент. Или, что то
+же самое, алгебраическая сумма токов, входящих в любую точку
+соединения, должна быть равна нулю:
+
+\begin{equation}
+  \label{eq:kirchoff_3}
+  \sum_n I_n =0.
+\end{equation}
+
+Уравнения \eqref{eq:kirchoff_2} и \eqref{eq:kirchoff_3} называются
+\textbf{правилами Кирхгофа}. С их помощью можно найти силы токов и
+напряжения в любой цепи. 
+
+Заметим, что эти уравнения мы получили из уравнений Максвелла и из
+естественного требования сохранения заряда. То есть, правила Кирхгофа
+довольно фундаментальны. Они справедливы для любых цепей, при
+переменном и постоянном токе. 
+
+\com{Нарисовать мостовую схему}
+
+В качестве примера рассмотрим схему моста c произвольными
+сопротивлениями $R_1, R_2, R_3, R_4, R_5$. Определим его
+результирующее сопротивление. Иными словами, какой будет ток на
+зажимах моста, если мы подадим на него разность потенциалов $U$?
+
+Рассмотрим крайний левый узел. В нём должен выполняться второй закон
+Кирхгофа:
+
+\begin{equation}
+  \label{eq:apply_kirchoff_0}
+  I = I_1 + I_2
+\end{equation}
+
+В петле $ADB$ должен выполняться первый закон Кирхгофа:
+
+\begin{equation}
+  \label{eq:apply_kirchoff_1}
+  R_1 I_1 + R_3 I_3 -R_2 I_2 = 0.
+\end{equation}
+
+В петле $DCB$ также:
+
+\begin{equation}
+  \label{eq:apply_kirchoff_2}
+  R_4 (I_1 - I_3) - R_5 (I_2 + I_3) -R_3 I_3 =0.
+\end{equation}
+
+Здесь мы учли второй закон Кирхгофа в узлах $B,D$. Падение потенциалов на
+мосту равно 
+
+\begin{equation}
+  \label{eq:apply_kirchoff_3}
+  U_{AC} = U_{AD} + U_{DC} + R_1 I_1 + R_4 (I_1 -I_3).
+\end{equation}
+
+Из уравнений \eqref{eq:apply_kirchoff_0}, \eqref{eq:apply_kirchoff_1}
+и \eqref{eq:apply_kirchoff_2} можно выразить $I_1, I_2$:
+
+\begin{eqnarray}
+  \label{eq:apply_kirchoff_currents}
+  \nn
+  I_1 = -\frac{I_3 (R_3 R_5 + R_2 (R_3 + R_4 + R_5))}{R_2 R_4 -R_1
+    R_5},\\
+  I_2 = -\frac{I_3 (R_3 R_4 + R_1 (R_3 + R_4 + R_5))}{R_2 R_4 -R_1
+    R_5}.
+\end{eqnarray}
+
+Общий ток, проходящий через мост равен $I=I_1 + I_2$ и также
+выражается через $I_3$. С разностью потенциалов такая же штука
+(см. \eqref{eq:apply_kirchoff_3}). Разделив одно на другое мы
+избавимся от $I_3$ и в сухом остатке получим комбинацию сопротивлений:
+
+\begin{equation}
+  \label{eq:bridge_answer}
+  R = \frac{R_1R_2 (R_3 + R_4) + R_3 R_4 R_5 + R_1 R_5 (R_2 + R_3 +
+    R_4) +R_2 R_4 (R_3 + R_5)}{R_3 (R_4 + R_5) + R_1 (R_3 + R_4 + R_5)
+  + R_2 (R_3 + R_4 +R_5)}.
+\end{equation}
+
+Мы получили ответ для \textit{произвольного} (а не только
+сбалансированного моста), решив всего лишь небольшую систему
+уравнений. Правила Кирхгофа нам здорово помогли. 
+
+
+\section{Оптика.}
+\label{sec:optics}
+
 
 \end{document}
